# opencloth_vision

./: CMakeLists.txt  README.md
AFEM/cuda/: CMakeLists.txt
AFEM/cuda/gpu_include/: AFEM_cuda.cuh
AFEM/cuda/gpu_source/: AFEM_QR_solver.cu  AFEM_cuda.cu
AFEM/include/: AFEM_geometry.hpp  AFEM_simulation.hpp  AFEM_tools.hpp  cuda_functions.cuh
AFEM/source/: AFEM_geometry.cpp  AFEM_simulation.cpp  AFEM_tools.cpp  AFEM_visualization.cpp  test_cuda.cpp
Geometry/: FEM_Elem.txt  FEM_Elem1728.txt  FEM_Elem216.txt  FEM_Elem2197.txt  FEM_Elem27.txt  FEM_Elem2744.txt  FEM_Elem3375.txt  FEM_Elem512.txt  FEM_Elem64.txt  FEM_Elem729.txt  FEM_Elem8.txt  FEM_Face.txt  FEM_Nodes.txt  FEM_Nodes1000.txt  FEM_Nodes125.txt  FEM_Nodes1331.txt  FEM_Nodes1728.txt  FEM_Nodes216.txt  FEM_Nodes2197.txt  FEM_Nodes27.txt  FEM_Nodes2744.txt  FEM_Nodes3375.txt  FEM_Nodes343.txt  FEM_Nodes512.txt  FEM_Nodes64.txt  FEM_Nodes729.txt  FEM_Nodes8.txt  FEM_Stationary.txt  FEM_Stationary1000.txt  FEM_Stationary125.txt  FEM_Stationary1331.txt  FEM_Stationary1728.txt  FEM_Stationary216.txt  FEM_Stationary2197.txt  FEM_Stationary27.txt  FEM_Stationary2744.txt  FEM_Stationary3375.txt  FEM_Stationary343.txt  FEM_Stationary512.txt  FEM_Stationary64.txt  (+2 more)
OpenCloth/OpenCloth_CoRotated_Linear_FEM/: hi.cpp  main.cpp
OpenCloth_CoRotated_Linear_FEM/: OpenCloth_CoRotated_Linear_FEM.VC.db  OpenCloth_CoRotated_Linear_FEM.sln  UpgradeLog.htm
OpenCloth_CoRotated_Linear_FEM/OpenCloth_CoRotated_Linear_FEM/: OpenCloth_CoRotated_Linear_FEM.vcxproj
include/: AFEM_kinect_grabber.h
lib/: AFEM_kinect_lib.lib
